frontend/scss/molecules/_m-article-header.scss
/* ... */
.m-article-header--generic-w-img .m-article-header__breadcrumb li {
  color: $color__text--title-contrast;
}

.m-article-header--generic-w-img .m-article-header__breadcrumb a {
  color: $color__text--title-contrast;
}


$imgPadding: 48px;
$thumbTease: 4px;

.m-article-header--gallery {
  display: block;
  padding-top: 0;

  @include breakpoint('large+') {
    min-height: 0;
    padding: 0;
  }
}

.m-article-header--gallery .m-article-header__img {
  @include background-fill;
  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
  width: 100%;
  //height: calc(100vh - #{112px - $thumbTease + $imgPadding});
  height: calc(100vh - 112px);
  min-height: 500px;
  max-height: 600px;
  padding-top: 16px;
  padding-bottom: 88px;
  background-color: $color__bg--primary;

  @include breakpoint('small+') {
    //height: calc(100vh - #{128px - $thumbTease + $imgPadding});
    height: calc(100vh - 320px);
    min-height: 660px;
    max-height: 800px;
    padding-top: 40px;
    padding-bottom: 120px;
  }

  @include breakpoint('medium+') {
    //height: calc(100vh - #{140px - $thumbTease + $imgPadding});
    height: calc(100vh - 180px);
    min-height: 720px;
    max-height: 860px;
    padding-top: 48px;
    padding-bottom: 116px;
  }
}

.m-article-header--gallery .m-article-header__img-container {
  display: block;
  position: relative;
  flex: 0 0 auto;
  width: 100%;
  max-width: 843px;
  height: 100%;
  max-height: 843px;
  margin: auto;
}

.m-article-header--gallery .m-article-header__img-container img {
  display: block;
  position: relative;
  z-index: 1;
  left: 50%;
  top: 50%;
  width: auto;
  max-width: 100%;
  height: auto;
  max-height: 100%;
  transform: translate(-50%, -50%);
  transition: opacity .25s;
}

.m-article-header__img-credit {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 88px;
  margin-bottom: -4px;
  padding-bottom: 4px;
  text-align: center;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;

  @include breakpoint('small+') {
    right: 166px;
    bottom: 36px;
    text-align: left;
    white-space: normal;
    overflow: visible;
  }
}

.m-article-header__img-actions {
  display: flex;
  position: absolute;
  left: 0;
  right: 0;
  bottom: 20px;
  flex-flow: row no-wrap;
  justify-content: center;

  @include breakpoint('small+') {
    left: auto;
    bottom: 32px;
  }
}

.m-article-header__img-actions > li {
  flex: 0 0 auto;
}

.m-article-header__img-actions > li:not(:first-child) {
  margin-left: 1px;
}

.m-article-header__img-actions > li .btn {
  border-radius: 0;
}

.m-article-header__img-actions > li:first-child .btn {
  border-top-left-radius: $border-radius;
  border-bottom-left-radius: $border-radius;
}

.m-article-header__img-actions > li:last-child .btn {
  border-top-right-radius: $border-radius;
  border-bottom-right-radius: $border-radius;
}



.m-article-header__img-nav {
  display: none;

  @include breakpoint('medium+') {
    position: absolute;
    left: 50%;
    top: 0;
    bottom: 0;
    width: 100vw;
    margin-left: -50vw;

    @media (hover: hover) {
      // only show this layer if hover is available
      display: block;
    }
  }
}

.m-article-header__img-nav-next-img,
.m-article-header__img-nav-prev-img {
  position: absolute;
  top: 0;
  bottom: 0;
  width: calc(50vw - 160px);
  height: 100%;
}

  .m-article-header__img-nav-next-img {
    right: 160px;

    button {
      cursor: e-resize;
    }
  }

  .m-article-header__img-nav-prev-img {
    left: 160px;

    button {
      cursor: w-resize;
    }
  }

.m-article-header__img-nav-next-img button,
.m-article-header__img-nav-prev-img button {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  padding: 0;
  border: 0 none;
  opacity: 0;
}

.m-article-header__img-nav-next-artwork,
.m-article-header__img-nav-prev-artwork {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 160px;
  height: 100%;
}

  .m-article-header__img-nav-next-artwork {
    right: 0;
  }

  .m-article-header__img-nav-prev-artwork {
    left: 0;
  }

.m-article-header__img-nav-artwork-preview {
  position: absolute;
  top: 50%;
  width: 200px;
  height: 248px;
  margin-top: -124px;
  padding: 20px;
  background-color: $color__black--80;
  opacity: 0;
  transition: all .15s $bezier--ease-out-circ;

  .m-article-header__img-nav-next-artwork & {
    right: -200px;
    padding-right: 40px;
  }

  .m-article-header__img-nav-prev-artwork & {
    left: -200px;
    padding-left: 40px;
    text-align: right;
  }

  .m-article-header__img-nav-next-artwork:hover & {
    right: 0;
    opacity: 1;
  }

  .m-article-header__img-nav-prev-artwork:hover & {
    left: 0;
    opacity: 1;
  }

  &:hover {
    background-color: $color__black--85;
  }
}

.m-article-header__img-nav-artwork-preview-img {
  display: block;
  position: relative;
  width: 120px;
  height: 120px;

  .m-article-header__img-nav-prev-artwork & {
    left: 20px;
  }
}

.m-article-header__img-nav-artwork-preview-img img {
  display: block;
  position: relative;
  left: 50%;
  top: 50%;
  width: auto;
  max-width: 100%;
  height: auto;
  max-height: 100%;
  transform: translate(-50%, -50%);
}

.m-article-header__img-nav-artwork-preview .f-caption {
  @include tucked-margin-top($f-caption, ('xsmall': 32));
  display: block;
  color: $color__text--secondary;

  strong {
    font-weight: normal;
    color: $color__text--title-contrast;
  }
}

.m-article-header__img-nav-artwork-preview .icon--arrow {
  position: absolute;
  top: 50%;
  margin-top: -8px;
  color: $color__text--title-contrast;
  transition: all .15s $bezier--bounce;

  .m-article-header__img-nav-next-artwork & {
    right: 20px;
  }

  .m-article-header__img-nav-prev-artwork & {
    left: 20px;
    transform: rotate(180deg);
  }
}

  .m-article-header__img-nav-next-artwork .m-article-header__img-nav-artwork-preview:hover .icon--arrow {
    right: 10px;
  }
/* ... */

